# boxy

./: .gitignore  API_README.md  BACKLOG.md  BOXY_LESSONS.md  CODEX_ANALYSIS.txt  CODEX_REVIEW.txt  CONTINUE.md  Cargo.toml  Cargo.toml.test  ISSUES.txt  LUCAS_TECHNICAL_ASSESSMENT.md  PERFORMANCE_REPORT_v0.6.md  QOL_IMPROVEMENTS.md  README.md  REPAIRS.md  ROADMAP.md  ROADMAP.txt  START.txt  TASKS.md  TASKS.txt  THEME_SYSTEM.md  THEME_SYSTEM_v0.6.md  THEME_UPGRADE_PROPOSAL.md  TODO.txt  WIDTH_CALCULATION.md  boxy_default.yml  boxy_demo_layout.yml  debug_emoji.sh  deploy.sh  logo.txt  makefile  project.mk  stakeholder.txt  test.sh  test_header.rs  test_info  test_info.rs  test_output.txt  test_width  test_width.rs  (+4 more)
.eggs/: egg.001.height-system-architecture.txt  egg.001.milestone-update.txt  egg.001.project-status.txt  egg.002.meteor-token-namespace-architecture.txt  egg.1.api-improvements.txt  egg.1.boxy-api-review.txt  egg.1.boxy-phase2-summary.txt  egg.1.boxy-project-status.txt  egg.1.boxy-project-summary.txt  egg.1.boxy-qol-improvements.txt  egg.1.boxy-theme-system-analysis.txt  egg.1.builtin-themes-investigation.txt  egg.1.china-05a-phase2-complete.txt  egg.1.cli-switchover-docs.txt  egg.1.compilation-warnings.txt  egg.1.comprehensive-docs-update-plan.txt  egg.1.documentation-cleanup-v11.txt  egg.1.engine-014-validation-system.txt  egg.1.engine-vs-theme-analysis.txt  egg.1.height-documentation-review.txt  egg.1.height-system-implementation.txt  egg.1.legacy-decommissioning.txt  egg.1.library-api-enhancements.txt  egg.1.qol-01-style-width-docs.txt  egg.1.readme-audit-comprehensive-gaps.txt  egg.1.rsb-colors-module-review.txt  egg.1.theme-color-inheritance.txt  egg.1.visual-module-review.txt  egg.10.milestone-1.7-streaming-complete.txt  egg.2.color-inheritance-docs.txt  egg.2.core-module-rsb-review.txt  egg.2.critical-mvp-triage.txt  egg.2.engine-015-dry-run-implementation.txt  egg.2.golden-session-finale.txt  egg.2.roadmap-consolidation-analysis.txt  egg.2.rsb-themes-module-review.txt  egg.2.tasks-technical-review.txt  egg.2.theme-resolution-bug-investigation.txt  egg.21.v0.21.0-milestone-completion.txt  egg.3.boxy-v09-transformation-session-wrapup.txt  (+30 more)
.eggs/archive/: egg.6.final-session-summary.txt
.session/: CONTINUE.md  CURRENT_STATUS.md  MAKE_README.md  REHYDRATION_PROMPT.md  REPORT.md  ROADMAP2.md  SESSION_01_theme-system-regression-analysis.md  SESSION_02_emoji-width-alignment-fixes.md  SESSION_03_current-status.md  SESSION_04_showcase-implementation-and-docs.md  SESSION_04_v11-release-and-standardization.md  SESSION_05_engine-foundation-complete.md  SESSION_06_defaults-level-and-global-dev-flag.md  SESSION_07_rsb-module-spec-colors-refactor.md  SESSION_09_colors.md  SESSION_10_m1-milestone-complete-rsb-modules.md  SESSION_11_height-milestone-foundation.md  SESSION_12_height-milestone-status-bar-fix.md  TODO.txt  old.TASKS.txt
.session/archive/: STATUS_v0.9.md
_wksp/: CODEX_FEEDBACK1.yml  CODEX_FINDINGS1.yml
benches/: status_render.rs
conf/: makefile-bug.mk  makefile-project.mk  makefile-semv.mk
docs/: BOXY_HEIGHT_STRAT.txt  NEXT_STEPS.md  PUBLIC_API_STRAT.txt  RECOMMENDATIONS.md  ROADMAP1.md  TASKS.md  TEST_CEREMONY_PLAN.md  TEST_ROADMAP.md  THEME_SYSTEM.md  THEME_SYSTEM_v0.6.md  TOKEN_NAMESPACE_CONCEPT.md  stakeholder.md  theme-schema.yml
docs/archive/: KREX_VALIDATION_REPORT.md  MIGRATION_v0.5_to_v0.6.md  STORY_POINTS.md
docs/plans/: ROADMAP.txt  TASKS.txt
examples/: README.md  all_bar_styles.rs  ansi_size_comparison.rs  background_colors.rs  barmode_layout.rs  barmode_test.rs  basic_box.rs  complete_features.rs  debug_barmode.rs  dynamic_constraints_test.rs  dynamic_layout.rs  extract_debug.rs  height_constraints.rs  height_padding_test.rs  new_box_styles.rs  pure_barmode_test.rs  room_runtime_demo.rs  room_runtime_integration.rs  test_missing_colors.rs  text_wrapping.rs  theming.rs  width_comparison_test.rs
prometheus/: consciousness-recovery.md  session-iter12.md
src/: boxes.rs  colors.rs  components.rs  config.rs  draw.rs  emoji_debug.rs  error.rs  height_plugin.rs  help.rs  jynx_plugin.rs  lib.rs  main-curr.rs  main.rs  main_corrupted.rs  main_v7.rs  parser.rs  theme_engine.rs  theme_engine_v7.rs  themes.rs  themes_builtin.rs  width_plugin.rs
temp_test/: Cargo.toml
tests/: api_integration.rs  auto_none_properties_tests.rs  engine_uat_tests.sh  integration_tests.rs  performance_test.sh  render_snapshots.rs  sanity-test.sh  test_theme_inheritance.rs  theme_management_tests.rs  ux-kit.sh  ux.sh
themes/: boxy_default.yml  default.yml  test_none_theme.yml  theme_template.yml
(+128 files in other folders)
