[package]
name = "boxy"
version = "0.10.0"
edition = "2024"
authors = ["qodeninja <1043235+qodeninja@users.noreply.github.com>"]
description = "A simple box drawing utility with proper Unicode width handling. Qodeninja (c) 2025"
license = "AGPL-3.0"            
publish = false  

[dependencies]
# unicode-width = "0.2"  # Replaced with custom implementation
strip-ansi-escapes = "0.2"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }

# RSB (Rebel String-Based) framework for stream bridges
rsb = { git = "https://github.com/oodx/rsb", branch = "main" }

[package.metadata.notes]
todo = "RSB integration in progress"



[profile.release]
# Optimize for small binary size
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
strip = true        # Strip symbols from binary
panic = "abort"     # Smaller panic handler

[[bin]]
name = "boxy"
path = "src/main.rs"
