[package]
name = "boxy"
version = "0.19.1"
edition = "2024"
authors = ["qodeninja <1043235+qodeninja@users.noreply.github.com>"]
description = "A simple box drawing utility with proper Unicode width handling. Qodeninja (c) 2025"
license = "AGPL-3.0"            
publish = false  


[package.metadata.hub]
notes = "Hub metadata for boxy repository"
hub_sync = "true"  # Set to "false" to skip this repo in hub updates
# priority = "medium"  # Options: high, medium, low
# Add any custom fields below
[dependencies]
unicode-width = "0.2"  # For comparison with custom implementation
strip-ansi-escapes = "0.2"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }

# RSB (Rebel String-Based) framework for stream bridges
rsb = { git = "https://github.com/oodx/rsb", branch = "main" }

[dev-dependencies]
#criterion = { version = "0.5", default-features = false, features = ["html_reports", "rayon"] }
criterion = "0.7"

[package.metadata.notes]
todo = "RSB integration in progress"



[profile.release]
# Optimize for small binary size
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
strip = true        # Strip symbols from binary
panic = "abort"     # Smaller panic handler

[[bin]]
name = "boxy"
path = "src/main.rs"

[[bench]]
name = "status_render"
harness = false
