[package]
name = "boxy"
version = "0.20.0"
edition = "2024"
authors = ["qodeninja <1043235+qodeninja@users.noreply.github.com>"]
description = "A simple box drawing utility with proper Unicode width handling. Qodeninja (c) 2025"
license = "AGPL-3.0"            
publish = false  


[package.metadata.hub]
notes = "Hub metadata for boxy repository"
hub_sync = "true"  # Set to "false" to skip this repo in hub updates
# priority = "medium"  # Options: high, medium, low
# Add any custom fields below
[dependencies]
unicode-width = "0.2"  # For comparison with custom implementation
strip-ansi-escapes = "0.2"
regex = "1.11"
once_cell = "1.20"

# CLI-only dependencies (optional)
serde = { version = "1.0", features = ["derive"], optional = true }
serde_yaml = { version = "0.9", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }

# RSB (Rebel String-Based) framework for stream bridges (CLI-only)
rsb = { git = "https://github.com/oodx/rsb", branch = "main", optional = true }

[dev-dependencies]
#criterion = { version = "0.5", default-features = false, features = ["html_reports", "rayon"] }
criterion = "0.7"

[package.metadata.notes]
todo = "RSB integration in progress"



[profile.release]
# Optimize for small binary size
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
strip = true        # Strip symbols from binary
panic = "abort"     # Smaller panic handler

[features]
default = ["cli"]
cli = ["serde", "serde_yaml", "chrono", "rsb"]
api-only = []

[lib]
name = "boxy"
path = "src/lib.rs"

[[bin]]
name = "boxy"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "emoji_debug"
path = "src/bin/emoji_debug.rs"
required-features = ["cli"]

[[bin]]
name = "width_compare"
path = "src/bin/width_compare.rs"
required-features = ["cli"]

[[bench]]
name = "status_render"
harness = false
